# amplifier-module-connectors

./: .gitignore  AGENTS.md  DAEMON.md  FORMATTING_FIXES.md  FORMATTING_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  MANIFEST_SUMMARY.md  Makefile  PROGRESSIVE_UPDATES.md  QUICKSTART.md  README.md  SCRIPTS.md  SLACK_PROJECT_MANAGEMENT.md  TASK_BREAKDOWN_ISSUE_9.md  TESTING.md  TEST_INFRASTRUCTURE.md  TEST_REPORT.md  add-issues-to-project.sh  bundle.md  llm_presentation.html  logs.sh  manage-daemon.sh  pyproject.toml  restart-daemon.sh  slack-app-manifest.yaml  tail-logs.sh
docs/: AMPLIFIER_COMMANDS.md  INTEGRATION_GUIDE.md  PROJECT_SWITCHING.md  QUICK_INTEGRATION.md  RESPONSE_TRUNCATION.md  STORAGE_STRUCTURE.md  amplifier-cli-integration.md  architecture.md  development.md  slack-app-manifest.md  slack-projects.md  slack-setup.md  slack-slash-commands-setup.md  teams-azure-relay-plan.md  teams-setup.md  troubleshooting-provider-errors.md
docs/adr/: 001-azure-relay-for-teams-local-development.md  002-per-developer-bot-registration-model.md  003-headless-agent-machine-paradigm.md  README.md
docs/connectors/: README.md
docs/examples/: README.md  existing-project-example.md  new-project-example.md
docs/issues/: teams-azure-relay-implementation.md
launchd/: com.amplifier.slack-connector.plist.example
modules/tool-project-manager/: README.md  module.md  tool.py
modules/tool-todo-list/: pyproject.toml
modules/tool-todo-list/tool_todo_list/: __init__.py  tool.py
scripts/: check-providers.py  setup.sh  test-ci.sh  test-coverage.sh  test.sh
src/connector_core/: __init__.py  models.py  protocols.py  session_manager.py
src/slack_connector/: adapter.py  bot.py  bridge.py  cli.py  (+5 more)
tests/: mocks.py  test_models.py  test_project_manager.py  test_protocols.py  test_response_truncator.py  test_session_manager.py  test_slack_adapter.py  test_teams_adapter.py
(+7 files in other folders)
