[project]
name = "tool-todo-list"
version = "0.1.0"
description = "Amplifier Tool module — lets agents manage todo lists in conversations"
requires-python = ">=3.11"
dependencies = [
    # amplifier-core is a peer dependency (provided by runtime) — do NOT list it
]

[project.entry-points."amplifier.modules"]
tool-todo-list = "tool_todo_list:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tool_todo_list"]
